[project]
name = "perplexity-deep-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "duckduckgo-search>=8.0.4",
    "groq>=0.28.0",
    "langchain>=0.3.25",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]
